--- a/Web App/website/templates/home.html
+++ b/Web App/website/templates/home.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %}
-{% block content %}
-<h1>This is the home page</h1>
+{% extends 'base.html' %} {% block content %}
+
+<div class="users">
+    <h1>{{users[0]}}</h1>
+</div>
+
 {% endblock %}
