Removed unnecessary error pages. Removed sign_up.html -> replaced with register.html. Added functionality to allow the user to register an account to the database as well as some functionality to the login process.

--- a/Web App/website/static/css/style.css
+++ b/Web App/website/static/css/style.css
@@ -18,7 +18,15 @@
     margin-bottom: 15px;
 }
 
+.close {
+    float: right;
+    border: 0px;
+    background-color: transparent;
+}
+
 body {
     background: #f4f4f4;
 }
+
+
 
