--- a/Web App/website/templates/admin.html
+++ b/Web App/website/templates/admin.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %} 
+<div class="users">
+    <h2>{{version[0]}}</h2>
+    <h3>{{user[0]}}</h3>
+</div>
 
-<h1>Admin Panel</h1>
-
-{% endblock %} 
+{% endblock %}
