--- a/Web App/website/templates/home.html
+++ b/Web App/website/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="users">
-    <h1>{{users[0]}}</h1>
+    <h1>Home Page</h1>
+    <p>Content</p>
 </div>
 
 {% endblock %}
