--- a/Web App/website/templates/navbar.html
+++ b/Web App/website/templates/navbar.html
@@ -25,6 +25,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('auth.register')}}">Register</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('auth.admin')}}">Admin</a>
+        </li>
       </ul>
     </div>
   </div>
