Added backend functionality

--- a/Web App/website/templates/admin.html
+++ b/Web App/website/templates/admin.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
+<!-- display postgreSQL version and users listed in the database -->
+<!-- TODO: add buttons to edit/delete users -->
 <div class="users">
     <h2>{{version[0]}}</h2>
     <h3>{{user[0]}}</h3>
