--- a/Web App/website/templates/success.html
+++ b/Web App/website/templates/success.html
@@ -3,6 +3,6 @@
 {% block content %}
 
     <h1>Success!</h1>
-    <p>Your account has been registered.</p>
+    <p>Your account has been registered!</p>
 
 {% endblock %}
