--- a/Web App/website/templates/home.html
+++ b/Web App/website/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="users">
+<div>
     <h1>Home Page</h1>
-    <p>Welcome, {{ user[1] }}</p>
+    <p>Web Scraper will go here</p>
 </div>
 
 {% endblock %}
