--- a/Web App/website/templates/login.html
+++ b/Web App/website/templates/login.html
@@ -11,7 +11,7 @@
         class="form-control"
         id="username"
         name="username"
-        placeholder="Create username"
+        placeholder="Enter username"
       />
       <label for="password">Password</label>
       <input
