--- a/Web App/website/templates/home.html
+++ b/Web App/website/templates/home.html
@@ -172,6 +172,44 @@
 
             </div><!--End of grid for element stacking-->
 
+            <div class="ap-title">
+                <h3 class="title" align="center">Admin Panel</h3>
+            </div>
+            <hr>
+            <div class="gb-padding">
+                <!-- admin panel grid container-->
+                <div class="grid-body">
+            
+                    <div class="col" id="users">
+                        <h6>Users</h6>
+                        <hr>
+                    </div>
+            
+                    <div class="col" id ="adminfunc">
+                        <h6>Admin Functions</h6>
+                        <hr>
+                        <button class="btn Func1">function</button>
+                        <button class="btn Func2">function</button>
+                        <button class="btn Func3">function</button>
+                        <button class="btn Func4">function</button>
+                        <button class="btn Func5">function</button>
+                        <button class="btn Func6">function</button>
+                    </div>
+            
+                    <div class="col" id="pushnoti">
+                        <h6>Global Notifications</h6>
+                        <hr>
+                        <p>type notification in box below:</p>
+                        <textarea id="w3review" name="w3review" rows="4" cols="50">
+                            Attention Users: 
+                        </textarea>
+                        <br>
+                        <input type="submit" value="Submit">
+                    </div>
+            
+                </div>
+            </div>
+
             
 
             <h8>version 1.0, developed by Jayden Godbold</h8>
