--- a/Web App/website/templates/admin.html
+++ b/Web App/website/templates/admin.html
@@ -2,40 +2,51 @@
 
 <!-- display postgreSQL version and users listed in the database -->
 <!-- TODO: add buttons to edit/delete users -->
-<style>
-    table {
-        text-align: center;
-        table-layout: fixed;
-        width: 50%;
-        border-collapse: collapse;
-        border: thin solid cornflowerblue;
-    }
-    th, td {
-        padding: 20px;
-        border: 3px solid cornflowerblue;
-    }
-</style>
-
-<div class="version">
-    <h2>{{version[0]}}</h2>
+<div class="row"><h3>Create User</h3></div>
+<div class="row">
+    <div class="col-md-3">
+        <div class="card card-body">
+            <form action="{{url_for('auth.add_user')}}" method="POST">
+                <div class="form-group">
+                    <input type="text" name="username" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="role" placeholder="Role">
+                </div>
+                <button class="btn btn-primary btn-block">
+                    Create
+                </button>
+            </form>
+        </div>
+    </div>
 </div>
-
-<div class="user">
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Username</th>
-            <th>Role</th>
-        </tr>
-        {% for row in user %}
-        <tr>
-            {% for cell in row %}
-            <td>
-                {{ cell }}
-            </td>
+<div class="col-md-8">
+    <table class="user-table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Username</th>
+                <th>Role</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in user %}
+            <tr>
+                {% for cell in row %}
+                <td>
+                    {{ cell }}
+                </td>
+                {% endfor %}
+                <td width="130">
+                    <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">edit</a>
+                    <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">delete</a>
+                </td>
+            </tr>
             {% endfor %}
-        </tr>
-        {% endfor %}
+        </tbody>
     </table>
 </div>
 
