--- a/Web App/website/templates/login.html
+++ b/Web App/website/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form method="POST">
+<form method="POST" autocomplete="off">
     <h3 align="center">Login</h3>
     <div class="form-group">
       <label for="email">Username</label>
