--- a/Web App/website/templates/admin.html
+++ b/Web App/website/templates/admin.html
@@ -18,7 +18,7 @@
                     <input type="text" name="password" placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <input type="text" name="role" placeholder="Role">
+                    <input type="text" name="role" placeholder="isAdmin">
                 </div>
                 <button class="btn btn-primary btn-block">
                     Create
@@ -31,9 +31,8 @@
     <table class="user-table">
         <thead>
             <tr>
-                <th>ID</th>
                 <th>Username</th>
-                <th>Role</th>
+                <th>isAdmin</th>
             </tr>
         </thead>
         <tbody>
